--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Rose&display=swap');
   body{
     font-family: 'Red Rose', cursive;
+    background-color: #f0f8ff;
   }
   h1{
     color: #0083ff;
